--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,11 @@
+:root {
+  --text: #03080c;
+  --background: #dae9f6;
+  --primary: #85b9e0;
+  --secondary: #afdbfd;
+  --accent: #2d76ae;
+}
+
 .profile-pic {
   position: relative;
   max-width: 130px;
@@ -10,7 +18,7 @@
   /* background-size: cover;  */
   margin: -31px;
   margin-left: -7px;
-  border: 6px solid rgba(0, 77, 64, 0.4);
+  border: 6px solid var(--accent);
   border-radius: 50% !important;
 }
 
@@ -40,7 +48,7 @@
   width: 50px;
   height: 50px;
   border: 0;
-  color: #ffffff;
+  color: var(--background);
   cursor: pointer;
   font-size: 30px;
   line-height: 70px;
@@ -83,9 +91,9 @@
 .readme {
   position: relative;
   padding: 11px 35px;
-  background: #fff;
-  color: #00796b;
-  border: 2px solid #fff;
+  background: var(--background);
+  color: var(--primary);
+  border: 2px solid var(--background);
   font-weight: 600;
   font-size: 15px;
   letter-spacing: 1px;
@@ -94,17 +102,17 @@
   -webkit-border-radius: 5px;
 }
 
-/* .readme:hover{
-  color: white;
-  background-color: #00796b;
-} */
+.readme:hover {
+  color: var(--background);
+  background-color: var(--primary);
+}
 
 .contactme {
   position: relative;
   padding: 11px 35px;
   background: none;
-  color: #fff;
-  border: 2px solid #fff;
+  color: var(--background);
+  border: 2px solid var(--background);
   font-weight: 600;
   font-size: 15px;
   letter-spacing: 1px;
@@ -115,15 +123,15 @@
 }
 
 .contactme:hover {
-  color: #00796b;
-  background-color: white;
+  color: var(--primary);
+  background-color: var(--background);
 }
 /* main body */
 
 /* body-color */
 
 body {
-  color: #333;
+  color: var(--text);
   font-size: 18px;
 }
 
@@ -139,7 +147,7 @@ body {
 } */
 
 a {
-  color: #004d40;
+  color: var(--accent);
 }
 
 /* main blockqoute */
@@ -154,8 +162,8 @@ a {
 } */
 
 blockquote {
-  border-left: 5px solid #795548;
-  color: #795548;
+  border-left: 5px solid var(--accent);
+  color: var(--accent);
   font-size: 125%;
   font-weight: 400;
   margin: 20px 0;
@@ -174,7 +182,7 @@ blockquote * {
 /* main nav */
 
 nav {
-  background: white;
+  background: var(--background);
   box-shadow: none;
   height: 0;
 }
@@ -236,7 +244,7 @@ ul.side-nav li {
 
 ul.side-nav.fixed a {
   box-sizing: content-box;
-  color: rgb(16, 202, 56);
+  color: var(--secondary);
   display: block;
   line-height: 100%;
   padding: 10px 0 12px;
@@ -257,7 +265,7 @@ ul.table-of-contents li.logo a:hover {
 } */
 
 ul.side-nav.fixed li.logo {
-  background-color: #fafafa;
+  background-color: hsl(from var(--background) h s calc(l + 20%));
   border-bottom: 1px solid #ddd;
   box-sizing: content-box;
   min-height: 90px;
@@ -322,7 +330,7 @@ h3 {
 } */
 
 #intro.section {
-  background: #a7ffeb repeat;
+  background: var(--secondary) repeat;
   position: relative;
 }
 
@@ -475,7 +483,7 @@ a.hoverline {
 } */
 
 a.hoverline:hover {
-  border-bottom: 3px solid #004d40 !important;
+  border-bottom: 3px solid var(--accent) !important;
 }
 
 #skills .card.large {
@@ -553,7 +561,7 @@ small {
 /* main .teal-text */
 
 .teal-text {
-  color: #008073 !important;
+  color: var(--primary) !important;
 }
 
 /* .teal-text {
@@ -563,7 +571,7 @@ small {
 /* .teal */
 /* https://www.realtimecolors.com/?colors=0f290a-f8fdf7-71d85f-cbf1c6-43bd2e&fonts=Poppins-Poppins */
 .teal {
-  background-color: #008073 !important;
+  background-color: var(--primary) !important;
 }
 
 /* .teal {
@@ -601,13 +609,13 @@ small {
     width: 100%;
   }
   nav {
-    background: #fff;
+    background: var(--background);
     height: 64px;
     position: absolute;
   }
   nav a.button-collapse,
   nav a.button-collapse i {
-    color: #009688;
+    color: var(--accent);
     height: 56px;
     line-height: 56px;
   }
